tests/success/simple_for.tig
for index:=1 to 10 do 
    (printi(index); print("\n"))
