tests/fail/for_wrong_valued_upper.tig
for i := nil to 10 do i
